--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "jsonwebtoken": "^8.2.1",
     "mysql": "^2.15.0",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.4"
+    "sequelize": "^3.30.4",
+    "sequelize-file": "^0.3.0"
   }
 }
